--- a/notebooks/01_data_and_baselines.ipynb
+++ b/notebooks/01_data_and_baselines.ipynb
@@ -64,10 +64,10 @@
     "\n",
     "if kaggle_path.exists():\n",
     "    df = pd.read_csv(kaggle_path)\n",
-    "    print(f\"✅ Loaded {len(df)} notes from Kaggle\")\n",
+    "    print(f\" Loaded {len(df)} notes from Kaggle dataset.\")\n",
     "else:\n",
-    "    print(\"❌ Download clinical_notes.csv from https://www.kaggle.com/datasets/akashadesai/clinical-notes\")\n",
-    "    print(\"   → Unzip to data/clinical_notes.csv\")\n",
+    "    print(\"Download clinical_notes.csv from https://www.kaggle.com/datasets/akashadesai/clinical-notes\")\n",
+    "    print(\"Unzip to data/clinical_notes.csv\")\n",
     "    # TEMP: Create tiny synthetic dataset to test\n",
     "    synthetic_data = {\n",
     "        'description': [\n",
@@ -78,7 +78,7 @@
     "        ] * 1000  # Scale to 4K\n",
     "    }\n",
     "    df = pd.DataFrame(synthetic_data)\n",
-    "    print(\"📝 Using synthetic demo data (replace with real!)\")\n",
+    "    print(\"Using synthetic demo data (placeholder!)\")\n",
     "\n",
     "print(df.head())\n",
     "print(\"Columns:\", df.columns.tolist())\n"
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "54f16c08",
    "metadata": {},
    "outputs": [
@@ -311,13 +311,13 @@
     "plt.savefig(OUTPUTS_DIR / 'lab1_results.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()\n",
     "\n",
-    "print(\"✅ Lab 1 complete: Baselines work, features clinically sensible!\")\n",
-    "print(\"💾 Saved plot to outputs/lab1_results.png\")\n"
+    "print(\" Lab 1 complete: Baselines work, features clinically sensible!\")\n",
+    "print(\" Saved plot to outputs/lab1_results.png\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "91071b28",
    "metadata": {},
    "outputs": [
@@ -330,12 +330,12 @@
     }
    ],
    "source": [
-    "# Save for later notebooks\n",
+    "# Saving data for later notebooks in this repo\n",
     "train_data = pd.DataFrame({'text_clean': X_train, 'label': y_train})\n",
     "test_data = pd.DataFrame({'text_clean': X_test, 'label': y_test})\n",
     "train_data.to_csv(DATA_DIR / 'train_processed.csv', index=False)\n",
     "test_data.to_csv(DATA_DIR / 'test_processed.csv', index=False)\n",
-    "print(\"💾 Saved processed train/test CSVs\")\n"
+    "print(\"Saved processed train/test CSVs\")\n"
    ]
   }
  ],
