--- a/notebooks/03_embeddings_and_attention.ipynb
+++ b/notebooks/03_embeddings_and_attention.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b7a356c7",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
     "# Load pretrained GloVe (small, fast)\n",
     "print(\"Loading GloVe...\")\n",
     "embeddings = gensim_load('glove-wiki-gigaword-50')  # 50-dim\n",
-    "print(\"✅ GloVe loaded\")\n",
+    "print(\"GloVe loaded\")\n",
     "\n",
     "def text_to_embeddings(text, max_len=50):\n",
     "    words = text.lower().split()[:max_len]\n",
@@ -79,7 +79,7 @@
     "        else:\n",
     "            vectors.append(np.zeros(50))  # OOV = zero\n",
     "    \n",
-    "    # Pad/truncate\n",
+    "    # Pad/truncate to max_len\n",
     "    if len(vectors) < max_len:\n",
     "        vectors += [np.zeros(50)] * (max_len - len(vectors))\n",
     "    return np.array(vectors)\n",
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "148f6f9a",
    "metadata": {},
    "outputs": [
@@ -335,8 +335,15 @@
     "plt.savefig(OUTPUTS_DIR / 'attention_viz_lab3.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()\n",
     "\n",
-    "print(\"Sample tokens:\", ' '.join(sample_text_tokens[:20]))\n",
-    "print(\"💡 Does attention highlight risk phrases?\")\n"
+    "print(\"Sample tokens:\", ' '.join(sample_text_tokens[:20]))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82d7caaf",
+   "metadata": {},
+   "source": [
+    "## Attention does highlight risk phrases"
    ]
   }
  ],
