--- a/notebooks/01_data_and_baselines.ipynb
+++ b/notebooks/01_data_and_baselines.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "fd2fbdb0",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "0783c702",
    "metadata": {},
    "outputs": [
@@ -37,9 +37,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "❌ Download clinical_notes.csv from https://www.kaggle.com/datasets/akashadesai/clinical-notes\n",
-      "   → Unzip to data/clinical_notes.csv\n",
-      "📝 Using synthetic demo data (replace with real!)\n",
+      "Download clinical_notes.csv from https://www.kaggle.com/datasets/akashadesai/clinical-notes\n",
+      "Unzip to data/clinical_notes.csv\n",
+      "Using synthetic demo data (placeholder!)\n",
       "                                         description\n",
       "0  Patient discharged home in stable condition. G...\n",
       "1  Recurrent CHF exacerbation. Poor medication co...\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "7e338494",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "d3e8c726",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "8f512cc3",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "54f16c08",
    "metadata": {},
    "outputs": [
@@ -269,8 +269,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Lab 1 complete: Baselines work, features clinically sensible!\n",
-      "💾 Saved plot to outputs/lab1_results.png\n"
+      " Lab 1 complete: Baselines work, features clinically sensible!\n",
+      " Saved plot to outputs/lab1_results.png\n"
      ]
     }
    ],
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "91071b28",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "💾 Saved processed train/test CSVs\n"
+      "Saved processed train/test CSVs\n"
      ]
     }
    ],
